Fixed description positioning on mobile in book view

--- a/cps/static/css/caliBlur_override.css
+++ b/cps/static/css/caliBlur_override.css
@@ -127,7 +127,7 @@ div#Downloads_list {
     .book-meta > .bookinfo > .comments, .book-meta > .description {
         font-size: 13px;
         min-height: 350px !important;
-        margin-top: 40px;
+        margin-top: 60px;
     }
     #bookDetailsModal > .modal-dialog.modal-lg > .modal-content > .modal-body > div > div > div > div.col-sm-3.col-lg-3.col-xs-5 > div.cover, body > div.container-fluid > div > div.col-sm-10 > div > div > div.col-sm-3.col-lg-3.col-xs-5 > div.cover {
         width: 100%;
